# sayjp

./: .gitignore  Cargo.toml  NOTICE  README.md  mise.toml
.claude/skills/convert-sbv2-voice/: SKILL.md
.github/workflows/: ci.yml
scripts/convert/: convert_deberta.py  convert_model.py  requirements.txt
src/: main.rs
src/engine/: bert.rs  error.rs  jtalk.rs  mod.rs  model.rs  mora.rs  nlp.rs  norm.rs  style.rs  tokenizer.rs  tts.rs  tts_util.rs
