[package]
name = "sayjp"
version = "0.2.0"
edition = "2021"
description = "オフライン日本語 TTS CLI"
license = "AGPL-3.0-or-later"
# 配布バイナリであり crates.io へは公開しない。cargo-about の private.ignore で
# 第三者ライセンス一覧から自身を除くためにも使う。
publish = false

[[bin]]
name = "sayjp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
hound = "3.5"
ndarray = "0.17.1"
# default features に download-binaries(静的 onnxruntime) と ndarray を含む。
ort = { git = "https://github.com/pykeio/ort.git", rev = "2de34065983a5c034f5afcc072b23b99479f465b" }
jpreprocess = { version = "0.13.2", features = ["naist-jdic"] }
tokenizers = { version = "0.22.2", default-features = false, features = ["onig", "esaxx_fast"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
num_cpus = "1"
thiserror = "2"

[profile.release]
strip = true
